@@ -148,12 +148,11 @@ public class WebSecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
+        configuration.setAllowedOriginPatterns(List.of(
                 "https://kalvitrack.vercel.app",
                 "https://*.vercel.app",
                 "https://*.cloudfront.net",
-                "http://localhost:3000",
-                "http://localhost:5173"
+                "http://localhost:[0-9]*"
         ));
         configuration.setAllowedMethods(Arrays.asList(
                 "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
